--- a/index.html
+++ b/index.html
@@ -104,29 +104,37 @@
           <ul class="team-list">
             <li class="team-items">
               <img class="team-img" src="./img/human1.jpg" alt="Product Designer" width="270" />
-              <h3 class="team-subheader">Ігор Дем'яненко</h3>
-              <p class="team-txt" lang="en">Product Designer</p>
+              <div class="team-wrapper">
+                <h3 class="team-subheader">Ігор Дем'яненко</h3>
+                <p class="team-txt" lang="en">Product Designer</p>
+              </div>
             </li>
             <li class="team-items">
               <img class="team-img" src="./img/human2.jpg" alt="Frontend Developer" width="270" />
-              <h3 class="team-subheader">Ольга Рєпіна</h3>
-              <p class="team-txt" lang="en">Frontend Developer</p>
+              <div class="team-wrapper">
+                <h3 class="team-subheader">Ольга Рєпіна</h3>
+                <p class="team-txt" lang="en">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-items">
               <img class="team-img" src="./img/human3.jpg" alt="Marketing" width="270" />
-              <h3 class="team-subheader">Микола Тарасов</h3>
-              <p class="team-txt" lang="en">Marketing</p>
+              <div class="team-wrapper">
+                <h3 class="team-subheader">Микола Тарасов</h3>
+                <p class="team-txt" lang="en">Marketing</p>
+              </div>
             </li>
             <li class="team-items">
               <img class="team-img" src="./img/human4.jpg" alt="UI Designer" width="270" />
-              <h3 class="team-subheader">Михайло Єрмаков</h3>
-              <p class="team-txt" lang="en">UI Designer</p>
+              <div class="team-wrapper">
+                <h3 class="team-subheader">Михайло Єрмаков</h3>
+                <p class="team-txt" lang="en">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
       </section>
     </main>
-    
+
     <!-- FOOTER -->
     <footer class="footer">
       <div class="container">
