--- a/portfolio.html
+++ b/portfolio.html
@@ -53,49 +53,67 @@
 
           <ul class="cards-list">
             <li class="cards-items">
-              <img class="cards-img" src="./img/tehnokrak(1).jpg" alt="" width="370">
-              <h2 class="cards-header">Технокряк</h2>
-              <p class="cards-txt">Веб-сайт</p>
+              <img class="cards-img" src="./img/tehnokrak(1).jpg" alt="" width="370" />
+              <div class="cards-wrapper">
+                <h2 class="cards-header">Технокряк</h2>
+                <p class="cards-txt">Веб-сайт</p>
+              </div>
             </li>
             <li class="cards-items">
-              <img class="cards-img" src="./img/design(1).jpg" alt="" width="370">
-              <h2 class="cards-header">Постер New Orlean vs Golden Star</h2>
-              <p class="cards-txt">Дизайн</p>
+              <img class="cards-img" src="./img/design(1).jpg" alt="" width="370" />
+              <div class="cards-wrapper">
+                <h2 class="cards-header">Постер New Orlean vs Golden Star</h2>
+                <p class="cards-txt">Дизайн</p>
+              </div>
             </li>
             <li class="cards-items">
-              <img class="cards-img" src="./img/app(1).jpg" alt="" width="370">
-              <h2 class="cards-header">Ресторан Seafood</h2>
-              <p class="cards-txt">Додаток</p>
+              <img class="cards-img" src="./img/app(1).jpg" alt="" width="370" />
+              <div class="cards-wrapper">
+                <h2 class="cards-header">Ресторан Seafood</h2>
+                <p class="cards-txt">Додаток</p>
+              </div>
             </li>
             <li class="cards-items">
-              <img class="cards-img" src="./img/marketin(1).jpg" alt="" width="370">
-              <h2 class="cards-header">Проєкт Prime</h2>
-              <p class="cards-txt">Маркетинг</p>
+              <img class="cards-img" src="./img/marketin(1).jpg" alt="" width="370" />
+              <div class="cards-wrapper">
+                <h2 class="cards-header">Проєкт Prime</h2>
+                <p class="cards-txt">Маркетинг</p>
+              </div>
             </li>
             <li class="cards-items">
-              <img class="cards-img" src="./img/box(1).jpg" alt="" width="370">
-              <h2 class="cards-header">Проєкт Boxes</h2>
-              <p class="cards-txt">Додаток</p>
+              <img class="cards-img" src="./img/box(1).jpg" alt="" width="370" />
+              <div class="cards-wrapper">
+                <h2 class="cards-header">Проєкт Boxes</h2>
+                <p class="cards-txt">Додаток</p>
+              </div>
             </li>
             <li class="cards-items">
-              <img class="cards-img" src="./img/web-site(1).jpg" alt="" width="370">
-              <h2 class="cards-header">Inspiration has no Borders</h2>
-              <p class="cards-txt">Веб-сайт</p>
+              <img class="cards-img" src="./img/web-site(1).jpg" alt="" width="370" />
+              <div class="cards-wrapper">
+                <h2 class="cards-header">Inspiration has no Borders</h2>
+                <p class="cards-txt">Веб-сайт</p>
+              </div>
             </li>
             <li class="cards-items">
-              <img class="cards-img" src="./img/book(1).jpg" alt="" width="370">
-              <h2 class="cards-header">Видання Limited Edition</h2>
-              <p class="cards-txt">Дизайн</p>
+              <img class="cards-img" src="./img/book(1).jpg" alt="" width="370" />
+              <div class="cards-wrapper">
+                <h2 class="cards-header">Видання Limited Edition</h2>
+                <p class="cards-txt">Дизайн</p>
+              </div>
             </li>
             <li class="cards-items">
-              <img class="cards-img" src="./img/proj(1).jpg" alt="" width="370">
-              <h2 class="cards-header">Проєкт LAB</h2>
-              <p class="cards-txt">Маркетинг</p>
+              <img class="cards-img" src="./img/proj(1).jpg" alt="" width="370" />
+              <div class="cards-wrapper">
+                <h2 class="cards-header">Проєкт LAB</h2>
+                <p class="cards-txt">Маркетинг</p>
+              </div>
             </li>
             <li class="cards-items">
-              <img class="cards-img" src="./img/laptop(1).jpg" alt="" width="370">
-              <h2 class="cards-header">Growing Business</h2>
-              <p class="cards-txt">Додаток</p>
+              <img class="cards-img" src="./img/laptop(1).jpg" alt="" width="370" />
+              <div class="cards-wrapper">
+                <h2 class="cards-header">Growing Business</h2>
+                <p class="cards-txt">Додаток</p>
+              </div>
             </li>
           </ul>
         </div>
