--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- HERO -->
     <main>
       <section class="section-hero">
-        <div class="container">
+        <div class="container-hero container">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
           <button class="hero-btn" type="button">Замовити послугу</button>
         </div>
@@ -107,6 +107,36 @@
               <div class="team-wrapper">
                 <h3 class="team-subheader">Ігор Дем'яненко</h3>
                 <p class="team-txt" lang="en">Product Designer</p>
+                <ul class="team-icon-list">
+                  <li class="icon-items">
+                    <a class="icon-linck" href="">
+                      <svg class="icon-svg">
+                        <use href="./img/symbol-defs.svg#icon-instagram-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-items">
+                    <a class="icon-linck" href="">
+                      <svg class="icon-svg">
+                        <use href="./img/symbol-defs.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-items">
+                    <a class="icon-linck" href="">
+                      <svg class="icon-svg">
+                        <use href="./img/symbol-defs.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-items">
+                    <a class="icon-linck" href="">
+                      <svg class="icon-svg">
+                        <use href="./img/symbol-defs.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-items">
@@ -114,6 +144,36 @@
               <div class="team-wrapper">
                 <h3 class="team-subheader">Ольга Рєпіна</h3>
                 <p class="team-txt" lang="en">Frontend Developer</p>
+                <ul class="team-icon-list">
+                  <li class="icon-items">
+                    <a class="icon-linck" href="">
+                      <svg class="icon-svg">
+                        <use href="./img/symbol-defs.svg#icon-instagram-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-items">
+                    <a class="icon-linck" href="">
+                      <svg class="icon-svg">
+                        <use href="./img/symbol-defs.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-items">
+                    <a class="icon-linck" href="">
+                      <svg class="icon-svg">
+                        <use href="./img/symbol-defs.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-items">
+                    <a class="icon-linck" href="">
+                      <svg class="icon-svg">
+                        <use href="./img/symbol-defs.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-items">
@@ -121,6 +181,36 @@
               <div class="team-wrapper">
                 <h3 class="team-subheader">Микола Тарасов</h3>
                 <p class="team-txt" lang="en">Marketing</p>
+                <ul class="team-icon-list">
+                  <li class="icon-items">
+                    <a class="icon-linck" href="">
+                      <svg class="icon-svg">
+                        <use href="./img/symbol-defs.svg#icon-instagram-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-items">
+                    <a class="icon-linck" href="">
+                      <svg class="icon-svg">
+                        <use href="./img/symbol-defs.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-items">
+                    <a class="icon-linck" href="">
+                      <svg class="icon-svg">
+                        <use href="./img/symbol-defs.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-items">
+                    <a class="icon-linck" href="">
+                      <svg class="icon-svg">
+                        <use href="./img/symbol-defs.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-items">
@@ -128,6 +218,36 @@
               <div class="team-wrapper">
                 <h3 class="team-subheader">Михайло Єрмаков</h3>
                 <p class="team-txt" lang="en">UI Designer</p>
+                <ul class="team-icon-list">
+                  <li class="icon-items">
+                    <a class="icon-linck" href="">
+                      <svg class="icon-svg">
+                        <use href="./img/symbol-defs.svg#icon-instagram-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-items">
+                    <a class="icon-linck" href="">
+                      <svg class="icon-svg">
+                        <use href="./img/symbol-defs.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-items">
+                    <a class="icon-linck" href="">
+                      <svg class="icon-svg">
+                        <use href="./img/symbol-defs.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-items">
+                    <a class="icon-linck" href="">
+                      <svg class="icon-svg">
+                        <use href="./img/symbol-defs.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -137,22 +257,112 @@
 
     <!-- FOOTER -->
     <footer class="footer">
-      <div class="container">
-        <a class="logo-footer" href="./index.html" lang="en"
-          ><span class="logo-lower">Web</span>Studio</a
-        >
-        <address class="footer-addres">
-          <p class="footer-addres-lower">м. Київ, пр-т Лесі Українки, 26</p>
-          <ul class="footer-addres-list">
-            <li class="footer-addres-items">
-              <a class="footer-addres-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <div class="container footer-container">
+        <div class="addres-wrapper">
+          <a class="logo-footer" href="./index.html" lang="en"
+            ><span class="logo-lower">Web</span>Studio</a
+          >
+          <address class="footer-addres">
+            <p class="footer-addres-lower">м. Київ, пр-т Лесі Українки, 26</p>
+            <ul class="footer-addres-list">
+              <li class="footer-addres-items">
+                <a class="footer-addres-link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="footer-addres-items">
+                <a class="footer-addres-link" href="tel:+380961111111">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+
+        <div class="social-wrapper">
+          <p class="social-header">приєднуйтесь</p>
+          <ul class="icon-list">
+            <li class="icon-items">
+              <a class="icon-linck" href="">
+                <svg class="icon-svg">
+                  <use href="./img/symbol-defs.svg#icon-instagram-1"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-addres-items">
-              <a class="footer-addres-link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="icon-items">
+              <a class="icon-linck" href="">
+                <svg class="icon-svg">
+                  <use href="./img/symbol-defs.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-items">
+              <a class="icon-linck" href="">
+                <svg class="icon-svg">
+                  <use href="./img/symbol-defs.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-items">
+              <a class="icon-linck" href="">
+                <svg class="icon-svg">
+                  <use href="./img/symbol-defs.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
+
+        <div class="form-wrapper">
+          <div class="modal-mail block">
+            <label class="label-form" for="mail">Підпишіться на розсилку</label>
+            <input class="input-form" type="email" name="mail" id="mail" placeholder="E-mail" />
+          </div>
+          <button class="form-btn" type="submit">Підписатися</button>
+        </div>
       </div>
     </footer>
+
+    <!-- MODAL -->
+    <div class="backdrop">
+      <div class="modal-wrapper">
+        <h2 class="modal-header">Залиште свої дані, ми вам передзвонимо</h2>
+        <form class="modal-form">
+          <div class="modal-name block">
+            <label class="label" for="name">Ім'я</label>
+            <input class="input" type="text" name="name" id="name" placeholder="" />
+          </div>
+
+          <div class="modal-tell block">
+            <label class="label" for="tel">Телефон</label>
+            <input class="input" type="tel" name="tel" id="tel" placeholder="" />
+          </div>
+
+          <div class="modal-mail block">
+            <label class="label" for="mail">Пошта</label>
+            <input class="input" type="email" name="mail" id="mail" placeholder="" />
+          </div>
+
+          <div class="modal-textarea block">
+            <label class="label" for="comment">Коментар</label>
+            <textarea
+              class="textarea"
+              name="comment"
+              id="comment"
+              rows="10"
+              placeholder="Введіть текст"
+            ></textarea>
+          </div>
+
+          <div class="modal-checkbox">
+            <input type="checkbox" name="policy" id="policy" />
+            <label class="label-checkbox" for="policy"
+              >Погоджуюся з розсилкою та приймаю
+              <span class="checkbox-span">Умови договору</span></label
+            >
+          </div>
+
+          <button class="modal-btn" type="submit">Відправити</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
