--- a/portfolio.html
+++ b/portfolio.html
@@ -122,21 +122,67 @@
 
     <!-- FOOTER -->
     <footer class="footer">
-      <div class="container">
-        <a class="logo-footer" href="./index.html" lang="en"
-          ><span class="logo-lower">Web</span>Studio</a
-        >
-        <address class="footer-addres">
-          <p class="footer-addres-lower">м. Київ, пр-т Лесі Українки, 26</p>
-          <ul class="footer-addres-list">
-            <li class="footer-addres-items">
-              <a class="footer-addres-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <div class="container footer-container">
+        <div class="addres-wrapper">
+          <a class="logo-footer" href="./index.html" lang="en"
+            ><span class="logo-lower">Web</span>Studio</a
+          >
+          <address class="footer-addres">
+            <p class="footer-addres-lower">м. Київ, пр-т Лесі Українки, 26</p>
+            <ul class="footer-addres-list">
+              <li class="footer-addres-items">
+                <a class="footer-addres-link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="footer-addres-items">
+                <a class="footer-addres-link" href="tel:+380961111111">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+
+        <div class="social-wrapper">
+          <p class="social-header">приєднуйтесь</p>
+          <ul class="icon-list">
+            <li class="icon-items">
+              <a class="icon-linck" href="">
+                <svg class="icon-svg">
+                  <use href="./img/symbol-defs.svg#icon-instagram-1"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-addres-items">
-              <a class="footer-addres-link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="icon-items">
+              <a class="icon-linck" href="">
+                <svg class="icon-svg">
+                  <use href="./img/symbol-defs.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-items">
+              <a class="icon-linck" href="">
+                <svg class="icon-svg">
+                  <use href="./img/symbol-defs.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-items">
+              <a class="icon-linck" href="">
+                <svg class="icon-svg">
+                  <use href="./img/symbol-defs.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
+
+        <div class="form-wrapper">
+          <div class="modal-mail block">
+            <label class="label-form" for="mail">Підпишіться на розсилку</label>
+            <input class="input-form" type="email" name="mail" id="mail" placeholder="E-mail" />
+          </div>
+          <button class="form-btn" type="submit">Підписатися</button>
+        </div>
       </div>
     </footer>
   </body>
