--- a/index.html
+++ b/index.html
@@ -52,24 +52,45 @@
           <h2 class="hidden-title">наші переваги</h2>
           <ul class="benefits-list">
             <li class="benefits-items">
+              <div class="svg_wrapper">
+                <svg class="benefits-svg">
+                  <use href="./img/symbol-defs.svg#icon-benefitsantenna-1"></use>
+                </svg>
+              </div>
               <h3 class="benefits-header">увага до деталей</h3>
               <p class="benfits-txt">
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
             <li class="benefits-items">
+              <div class="svg_wrapper">
+                <svg class="benefits-svg">
+                  <use href="./img/symbol-defs.svg#icon-benefitsclock-1"></use>
+                </svg>
+              </div>
               <h3 class="benefits-header">пунктуальність</h3>
               <p class="benfits-txt">
                 Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
             <li class="benefits-items">
+              <div class="svg_wrapper">
+                <svg class="benefits-svg">
+                  <use href="./img/symbol-defs.svg#icon-benefitsdiagram1"></use>
+                </svg>
+              </div>
               <h3 class="benefits-header">планування</h3>
               <p class="benfits-txt">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="benefits-items">
+              <div class="svg_wrapper">
+                <svg class="benefits-svg">
+                  <use href="./img/symbol-defs.svg#icon-benefitsastronaut-1"></use>
+                </svg>
+              </div>
+
               <h3 class="benefits-header">сучасні технології</h3>
               <p class="benfits-txt">
                 Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -111,28 +132,28 @@
                   <li class="icon-items">
                     <a class="icon-linck" href="">
                       <svg class="icon-svg">
-                        <use href="./img/symbol-defs.svg#icon-instagram-1"></use>
+                        <use href="./img/symbol-defs-social.svg#icon-instagram-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-items">
                     <a class="icon-linck" href="">
                       <svg class="icon-svg">
-                        <use href="./img/symbol-defs.svg#icon-twitter-1"></use>
+                        <use href="./img/symbol-defs-social.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-items">
                     <a class="icon-linck" href="">
                       <svg class="icon-svg">
-                        <use href="./img/symbol-defs.svg#icon-facebook-1"></use>
+                        <use href="./img/symbol-defs-social.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-items">
                     <a class="icon-linck" href="">
                       <svg class="icon-svg">
-                        <use href="./img/symbol-defs.svg#icon-linkedin-1"></use>
+                        <use href="./img/symbol-defs-social.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -148,28 +169,28 @@
                   <li class="icon-items">
                     <a class="icon-linck" href="">
                       <svg class="icon-svg">
-                        <use href="./img/symbol-defs.svg#icon-instagram-1"></use>
+                        <use href="./img/symbol-defs-social.svg#icon-instagram-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-items">
                     <a class="icon-linck" href="">
                       <svg class="icon-svg">
-                        <use href="./img/symbol-defs.svg#icon-twitter-1"></use>
+                        <use href="./img/symbol-defs-social.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-items">
                     <a class="icon-linck" href="">
                       <svg class="icon-svg">
-                        <use href="./img/symbol-defs.svg#icon-facebook-1"></use>
+                        <use href="./img/symbol-defs-social.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-items">
                     <a class="icon-linck" href="">
                       <svg class="icon-svg">
-                        <use href="./img/symbol-defs.svg#icon-linkedin-1"></use>
+                        <use href="./img/symbol-defs-social.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -185,28 +206,28 @@
                   <li class="icon-items">
                     <a class="icon-linck" href="">
                       <svg class="icon-svg">
-                        <use href="./img/symbol-defs.svg#icon-instagram-1"></use>
+                        <use href="./img/symbol-defs-social.svg#icon-instagram-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-items">
                     <a class="icon-linck" href="">
                       <svg class="icon-svg">
-                        <use href="./img/symbol-defs.svg#icon-twitter-1"></use>
+                        <use href="./img/symbol-defs-social.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-items">
                     <a class="icon-linck" href="">
                       <svg class="icon-svg">
-                        <use href="./img/symbol-defs.svg#icon-facebook-1"></use>
+                        <use href="./img/symbol-defs-social.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-items">
                     <a class="icon-linck" href="">
                       <svg class="icon-svg">
-                        <use href="./img/symbol-defs.svg#icon-linkedin-1"></use>
+                        <use href="./img/symbol-defs-social.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -222,28 +243,28 @@
                   <li class="icon-items">
                     <a class="icon-linck" href="">
                       <svg class="icon-svg">
-                        <use href="./img/symbol-defs.svg#icon-instagram-1"></use>
+                        <use href="./img/symbol-defs-social.svg#icon-instagram-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-items">
                     <a class="icon-linck" href="">
                       <svg class="icon-svg">
-                        <use href="./img/symbol-defs.svg#icon-twitter-1"></use>
+                        <use href="./img/symbol-defs-social.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-items">
                     <a class="icon-linck" href="">
                       <svg class="icon-svg">
-                        <use href="./img/symbol-defs.svg#icon-facebook-1"></use>
+                        <use href="./img/symbol-defs-social.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="icon-items">
                     <a class="icon-linck" href="">
                       <svg class="icon-svg">
-                        <use href="./img/symbol-defs.svg#icon-linkedin-1"></use>
+                        <use href="./img/symbol-defs-social.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -254,6 +275,57 @@
         </div>
       </section>
     </main>
+
+    <!-- CLIENTS -->
+    <section class="sectio-clients">
+      <div class="container">
+        <h2 class="clients-header">Постійні клієнти</h2>
+        <ul class="clients-list">
+          <li class="clients-items">
+            <a href="" class="clients-link">
+              <svg class="clients-svg">
+                <use href="./img/symbol-defs-clients.svg#icon-benefitsyaco"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="clients-items">
+            <a href="" class="clients-link">
+              <svg class="clients-svg">
+                <use href="./img/symbol-defs-clients.svg#icon-benefitstaglinecompany"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="clients-items">
+            <a href="" class="clients-link">
+              <svg class="clients-svg">
+                <use href="./img/symbol-defs-clients.svg#icon-benefitscompany"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="clients-items">
+            <a href="" class="clients-link">
+              <svg class="clients-svg">
+                <use href="./img/symbol-defs-clients.svg#icon-benefitsfoster"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="clients-items">
+            <a href="" class="clients-link">
+              <svg class="clients-svg">
+                <use href="./img/symbol-defs-clients.svg#icon-benefitsbrand"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="clients-items">
+            <a href="" class="clients-link">
+              <svg class="clients-svg">
+                <use href="./img/symbol-defs-clients.svg#icon-benefitstagline"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
 
     <!-- FOOTER -->
     <footer class="footer">
@@ -283,28 +355,28 @@
             <li class="icon-items">
               <a class="icon-linck" href="">
                 <svg class="icon-svg">
-                  <use href="./img/symbol-defs.svg#icon-instagram-1"></use>
+                  <use href="./img/symbol-defs-social.svg#icon-instagram-1"></use>
                 </svg>
               </a>
             </li>
             <li class="icon-items">
               <a class="icon-linck" href="">
                 <svg class="icon-svg">
-                  <use href="./img/symbol-defs.svg#icon-twitter-1"></use>
+                  <use href="./img/symbol-defs-social.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="icon-items">
               <a class="icon-linck" href="">
                 <svg class="icon-svg">
-                  <use href="./img/symbol-defs.svg#icon-facebook-1"></use>
+                  <use href="./img/symbol-defs-social.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="icon-items">
               <a class="icon-linck" href="">
                 <svg class="icon-svg">
-                  <use href="./img/symbol-defs.svg#icon-linkedin-1"></use>
+                  <use href="./img/symbol-defs-social.svg#icon-linkedin-1"></use>
                 </svg>
               </a>
             </li>
