--- a/portfolio.html
+++ b/portfolio.html
@@ -148,28 +148,28 @@
             <li class="icon-items">
               <a class="icon-linck" href="">
                 <svg class="icon-svg">
-                  <use href="./img/symbol-defs.svg#icon-instagram-1"></use>
+                  <use href="./img/symbol-defs-social.svg#icon-instagram-1"></use>
                 </svg>
               </a>
             </li>
             <li class="icon-items">
               <a class="icon-linck" href="">
                 <svg class="icon-svg">
-                  <use href="./img/symbol-defs.svg#icon-twitter-1"></use>
+                  <use href="./img/symbol-defs-social.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="icon-items">
               <a class="icon-linck" href="">
                 <svg class="icon-svg">
-                  <use href="./img/symbol-defs.svg#icon-facebook-1"></use>
+                  <use href="./img/symbol-defs-social.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="icon-items">
               <a class="icon-linck" href="">
                 <svg class="icon-svg">
-                  <use href="./img/symbol-defs.svg#icon-linkedin-1"></use>
+                  <use href="./img/symbol-defs-social.svg#icon-linkedin-1"></use>
                 </svg>
               </a>
             </li>
