--- a/portfolio.html
+++ b/portfolio.html
@@ -19,10 +19,8 @@
             ><span class="logo-nav">Web</span>Studio</a
           >
           <ul class="nav-list">
-            <li class="nav-items"><a class="nav-link" href="./index.html">Студія</a></li>
-            <li class="nav-items">
-              <a class="nav-link active" href="./portfolio.html">Портфоліо</a>
-            </li>
+            <li class="nav-items"><a class="nav-link active" href="./test.html">Студія</a></li>
+            <li class="nav-items"><a class="nav-link" href="./portfolio.html">Портфоліо</a></li>
             <li class="nav-items"><a class="nav-link" href="">Контакти</a></li>
           </ul>
         </nav>
@@ -30,10 +28,20 @@
         <address class="addres-upper">
           <ul class="addres-list-upper">
             <li class="addres-items-upper">
-              <a class="addres-link-upper" href="mailto:info@devstudio.com">info@devstudio.com</a>
+              <a class="addres-link-upper" href="mailto:info@devstudio.com"
+                ><svg class="svg-addres">
+                  <use href="./img/symbol-defs-addres.svg#icon-konvert1"></use>
+                </svg>
+                info@devstudio.com</a
+              >
             </li>
             <li class="addres-items-upper">
-              <a class="addres-link-upper" href="tel:+380961111111">+38 096 111 11 11</a>
+              <a class="addres-link-upper" href="tel:+380961111111"
+                ><svg class="svg-addres phone-svg">
+                  <use href="./img/symbol-defs-addres.svg#icon-smartphone1"></use>
+                </svg>
+                +38 096 111 11 11</a
+              >
             </li>
           </ul>
         </address>
@@ -181,7 +189,12 @@
             <label class="label-form" for="mail">Підпишіться на розсилку</label>
             <input class="input-form" type="email" name="mail" id="mail" placeholder="E-mail" />
           </div>
-          <button class="form-btn" type="submit">Підписатися</button>
+          <button class="form-btn" type="submit">
+            Підписатися
+            <svg width="24px" height="24px">
+              <use href="./img/symbol-defs-clients.svg#icon-benefitsplain"></use>
+            </svg>
+          </button>
         </div>
       </div>
     </footer>
